--- a/views/start.ejs
+++ b/views/start.ejs
@@ -15,7 +15,7 @@
         <div class="logo"><img src="/images/logo.png" alt=""></div>
         <ul class="nav-links">
             <li><a onclick="openStats()" href="#">📈 Stats</a></li>
-            <li><a href="#">📗 All Jobs</a></li>
+            <li><a onclick="addSearchJob()" href="#">📗 All Jobs</a></li>
             <li><a onclick="addInputs()" href="#">📝 Add Job</a></li>
             <li><a onclick="displayProfile()" href="#">🛠️ Profile</a></li>
         </ul>
