--- a/public/css/jobify.css
+++ b/public/css/jobify.css
@@ -162,6 +162,7 @@ main{
   width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start; 
     padding:2rem 3rem ;
@@ -311,4 +312,100 @@ main{
     font-size: 1.2rem;
     color: var(--grey-900);
    letter-spacing: 2px;
+}
+.text{
+    margin-top: 1rem;
+    font-size: 1.5rem;
+    letter-spacing: 1px;
+}
+.row{
+    margin-top: 1rem;
+    width: 100%;
+    display: grid;
+    grid-template-columns:  1fr 1fr;
+    grid-gap: 1rem;
+}
+.job{
+
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    background-color: var(--white);
+    border-radius: 5px;
+    box-shadow: var(--shadow-2);
+    position: relative;
+    transition: all 0.3s ease-in-out;
+    padding: 2rem; 
+}
+.card-header{
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    color: var(--grey-900);
+    
+}
+.wrapp{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    font-size: 1.2rem;
+    padding: 0 1rem;
+}
+.card-logo{
+    font-size: 1.8rem;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    background: var(--primary-500);
+    color: var(--white);
+    margin-bottom: 1rem;
+}
+.card-company{
+    color: var(--grey-300);
+}
+.card-body{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.2rem;
+}
+.card-location,.card-date{
+    margin-bottom: 1rem;
+}
+.card-status{
+    color: var(--red-dark);
+    background: var(--red-light);
+    padding: 0.3rem 0.5rem;
+}
+.card-footer{
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 1rem;
+}
+.card-footer button{
+    background: var(--primary-200);
+    color: var(--primary-800);
+    border-radius: 4px;
+    font-size: 1.1rem;
+    border: none;
+    box-shadow: var(--shadow-2);
+    cursor: pointer;
+    letter-spacing: 1px;
+    padding: 0.5rem 1rem;
+    margin-right: 1rem;
+}
+#card-delete{
+    background: var(--red);
+    color: var(--red-dark);
 }
